My Third Commit

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         </ul>
     </nav>
     ABOUT
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea mollitia molestias iusto natus molestiae quod officiis distinctio adipisci fugiat ab. Vel non inventore repudiandae tenetur quas aperiam odio fuga deleniti!</p>
     <footer>
         <hr>
         <h4>&copy;2024| www.nyalibeachhotel.com| All Rights Reserved</h4>
